objects/BU_PH__c.object
<CustomObject>
    <fields>
        <fullName>Business_Description__c</fullName>
        <label>Business Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Default_Per__c</fullName>
        <label>Default Per</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Default_UOM__c</fullName>
        <label>Default UOM</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>F_Product_Hierarchy_Code__c</fullName>
        <formula>Product_Hierarchy__r.PH_Code__c</formula>
        <label>F Product Hierarchy Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Pricing_Util_SFID__c</fullName>
        <description>This field is populated with the legacy One DuPont SF ID and was used during the split to map related records during the split and insert process to maintain the migrated record’s parent-child record relationships.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the pre-split original 18 digit Salesforce ID of this record that came from the original One Dupont Salesforce instance before the business units were separated. Its is case insensitive and unique.</inlineHelpText>
        <label>Legacy Pricing Util SFID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Novus_External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Stores Legacy Id</description>
        <externalId>true</externalId>
        <label>Novus External Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>OrgGroup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Organizational Group</label>
        <referenceTo>OrgGroup__c</referenceTo>
        <relationshipLabel>BU-PH</relationshipLabel>
        <relationshipName>BU_PH</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Hierarchy__c</fullName>
        <label>Product Hierarchy</label>
        <referenceTo>Product_Hierarchy__c</referenceTo>
        <relationshipLabel>BU-PH</relationshipLabel>
        <relationshipName>BU_PH</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Representative_Material_Code__c</fullName>
        <description>This field is used to store the representative material code mapped to a Product Hierarchy and it will be used for Net Price Calculation.</description>
        <label>Representative Material Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Representative_Material_Description__c</fullName>
        <description>This field is used to store the representative material description mapped to a Product Hierarchy and it will be used for Net Price Calculation.</description>
        <label>Representative Material Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>BU-PH</label>
    <nameField>
        <displayFormat>BUPH-{00000}</displayFormat>
        <label>BU-PH Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BU-PH</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>